RESOLVED FIXED34475
[Qt] Symbian plugins include a wrong header file for QPixmap
https://bugs.webkit.org/show_bug.cgi?id=34475
Summary [Qt] Symbian plugins include a wrong header file for QPixmap
Benjamin Poulain
Reported 2010-02-02 05:26:00 PST
PluginViewSymbian includes QPixmap.h. This file does not exists. It works on Windows because the file qpixmap.h exists, the compilation fails on the other operating systems.
Attachments
Include the right header file (992 bytes, patch)
2010-02-02 05:27 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-02-02 05:27:30 PST
Created attachment 47926 [details] Include the right header file
Ariya Hidayat
Comment 2 2010-02-02 07:12:53 PST
Comment on attachment 47926 [details] Include the right header file LGTM.
WebKit Commit Bot
Comment 3 2010-02-02 07:29:39 PST
Comment on attachment 47926 [details] Include the right header file Clearing flags on attachment: 47926 Committed r54235: <http://trac.webkit.org/changeset/54235>
WebKit Commit Bot
Comment 4 2010-02-02 07:29:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.