2010-02-02  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Ariya Hidayat.

        [Qt] Symbian plugins include a wrong header file for QPixmap
        https://bugs.webkit.org/show_bug.cgi?id=34475

        * plugins/symbian/PluginViewSymbian.cpp:

Canonical link: https://commits.webkit.org/45579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54235 268f45cc-cd09-0410-ab3c-d52691b4dbfc